# InstructTTSEval

./: .gitignore  README.md  eval.py  eval_prompt.txt  example_en.jsonl  main.py  pyproject.toml  requirements.txt  run_eval.sh  run_llama_server.sh  test_gt.py  test_synthesize.py
eval/: eval.py  run_eval.sh
