[project]
name = "instructttseval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modelscope>=1.38.0",
    "openai>=1.0.0",
    "pyarrow>=25.0.0",
    "qwen-tts>=0.1.1",
    "torch==2.6",
    "torchaudio==2.6",
    "tqdm>=4.68.3",
]
