[project]
name = "instructttseval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=25.0.0",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
tts = [
    "modelscope>=1.38.0",
    "qwen-tts>=0.1.1",
    "soundfile>=0.12.0",
    "torch==2.6",
    "torchaudio==2.6",
]
